--- a/LECTURE4.Rmd
+++ b/LECTURE4.Rmd
@@ -158,7 +158,7 @@ How can we do this in InsightMaker?
 
 Your model should look something like this!
 
-![](IM5.jpg)
+![](IM5.jpg){width=65%}
 
 For the purpose of answering the questions below, [here is a functioning model you can use as a starting point](https://insightmaker.com/insight/2ewOk7vSFlpEGxdu4Hvx9G/logistic-bd):
 
