--- a/LECTURE5.Rmd
+++ b/LECTURE5.Rmd
@@ -21,20 +21,21 @@ In the last lecture, we talked about how density-dependent feedbacks can regulat
 
 What happens if density dependence goes the other way? What if an increase in population density were to induce an *increase* in population growth rate *r*? This would be a positive feedback: increased population density results in faster growth, which produces a bigger population, which results in faster population growth, etc.
 
-Imagine a very social species, like the prairie dogs pictured above. If the density of prairie dogs is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher *d*. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems (audio feedback, avalanches, etc)!
+Imagine a social species, like the prairie dogs pictured above. If the density of prairie dogs is high, they can warn each other about predators. If the density is low, there may not be enough neighbors around to warn each other of approaching danger, and the predation rate might go up, resulting in higher *d*. This is a positive feedback, and can result in, well, you should simulate it for yourself! 
 
 This effect -- whereby population growth rate may **decrease** when population size decreases -- is called an **Allee effect**, named after ecologist [Warder Clyde Allee](https://en.wikipedia.org/wiki/Warder_Clyde_Allee) (1885-1955). Allee specialized in social behavior and aggregations, and recognized the benefits of social aggregations to individual fitness.
 
-Interestingly, Warder Allee's interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was a devout Quaker, an anti-war activist and an advocate of human social cooperation! From the Wikipedia article: "Allee saw ecologists as 'social healers' who were able to provide a naturalistic foundation for ethics through their research"
+Interestingly, Dr. Allee's interest in cooperation and the benefits of social aggregations spilled over into his life in other ways. He was a devout Quaker, an anti-war activist and an advocate of human social cooperation! From the Wikipedia article: "Allee saw ecologists as 'social healers' who were able to provide a naturalistic foundation for ethics through their research"
 
 
-![](Allee1.jpg)
+![](Allee1.jpg){width=30%}
+
+### Passenger pigeon
+
+One interesting example of a possible Allee effect involves the extinction of the passenger pigeon (*Ectopistes migratorius*).  
 
 
-One of the most famous examples of a possible Allee effect involves the passenger pigeon (*Ectopistes migratorius*).  
-
-
-![](PP2.jpg)
+![](PP2.jpg){width=30%}
 
 The [passenger pigeon](https://en.wikipedia.org/wiki/Passenger_pigeon) was one of the most abundant birds in North America. Some estimate that the total species abundance may have been over three *billion* at one time!
 
@@ -42,35 +43,41 @@ Aldo Leopold once said,
 
 > "Men still live who, in their youth, remember pigeons; trees still live who, in their youth, were shaken by a living wind. But a few decades hence only the oldest oaks will remember, and at long last only the hills will know."   —Aldo Leopold, “On a Monument to the Pigeon", 1947
 
-What happened to the passenger pigeon? Well, first of all pigeons were hunted on a massive scale using wasteful methods. 
+What happened to the passenger pigeon? 
 
-![](PP1.jpg)
+First of all, pigeons were hunted on a massive scale using wasteful methods. 
 
-Secondly, hardwood forests (primary food source for pigeons was mast from hardwood trees) were cleared on a massive scale, reducing habitat.   
+![](PP1.jpg){width=50%}
 
-But what do passenger pigeons have to do with the Allee effect? Well, they were an *extremely* gregarious species. Once their numbers dwindled (due to hunting and clearcutting) one hypothesis is that their social systems broke down, and they could no longer effectively reproduce or protect themselves from predators.   
+Secondly, hardwood forests (primary food source for pigeons was mast from hardwood trees) were cleared on a massive scale, reducing available habitat.   
+
+But what do passenger pigeons have to do with the Allee effect? 
+
+Passenger pigeons were an extremely gregarious species. Once their numbers dwindled (due to hunting and clear-cutting) one hypothesis is that their social systems broke down, and they could no longer effectively reproduce or protect themselves from predators.   
 
 ## In-class exercise: Allee effect
 
-In this exercise we will explore the implications of **positive density dependence** on vital rates. 
+In this exercise we will explore the implications of **positive density dependence** (Allee effect) on population dynamics. 
 
-1. In InsightMaker, load up the logistic model with vital rates -- that is, where $b$ and $d$ are each modeled density-dependent.  It should look something like this (or if you don't already have this, clone it from [here](https://insightmaker.com/insight/70353/Logistic-Growth-1#)):
+1. In InsightMaker, load up the logistic population growth model with explicit birth and death rate -- that is, where $b$ and $d$ both decline linearly with increasing population density.  It should look something like this (or if you don't already have this, clone it from [here](https://insightmaker.com/insight/2ewOk7vSFlpEGxdu4Hvx9G/logistic-bd)):
 
-![](IM5.jpg)
+It should be structured something like this:
 
-2. Now add a new constant ([Variable] in InsightMaker) called *Allee threshold*. Set this constant equal to 200.
+![](IM5.jpg){width=70%}
+
+2. Now add a new [Variable] in InsightMaker called *Allee threshold*. Set this variable equal to 200 (it is a 'constant' and will remain at this value through the simulation).
 
 3. As for the other parameters, set them as follows:    
 
 - Initial abundance: 201 (just above the Allee threshold) 
-- Density dependence on birth rate: 0.004    
-- Density dependence on mortality: 0.001   
+- Density dependence on birth rate: 0.0004    
+- Density dependence on mortality: 0.0001   
 - Max birth rate: 0.8   
 - Min mortality: 0.3   
 
 4. Now let's use a *Conditional (IF-THEN-ELSE) statement* to specify an Allee effect. The population experiences maximum growth rate at the Allee threshold. If the population is above the Allee threshold, the population exhibits (stabilizing) negative density dependence. If the population is below the Allee threshold, then the population experiences positive density dependence- whereby individuals in smaller populations have *lower* overall fitness. 
 
-To do this, define your *Births per Capita* using the following syntax:
+To do this, define your *Births per Capita* using the following syntax (or equivalent):
 
 ```
 If [Pigeons]<[Allee threshold] Then
@@ -80,7 +87,7 @@ Else
 End If
 ```
 
-Similarly, define your *Deaths per capita* using the following syntax:
+Similarly, define your *Deaths per capita* using the following syntax (or equivalent):
 
 ```
 If [Pigeons]<[Allee threshold] Then
@@ -90,23 +97,19 @@ Else
 End If
 ```
 
-5. If we are running out of time in class (which we probably will be!), load the model (and clone it!) using [this link](https://insightmaker.com/insight/71147/Allee-Effect-1#)!    
+5. If we are running out of time in class (which we probably will be!), load the model (and clone it!) using [this link](https://insightmaker.com/insight/3iPYWl5vT2niZ1WGtC7C7Y/Allee-effect-lecture-5)!    
 
 Now you can try to answer the following questions:
 
+**Q**: What is the carrying capacity (K) for this population? [PointSolutions]
 
-**Q**: What is the carrying capacity (K) for this population? 
+**Q**: Carrying capacity (K) represents one equilibrium point in this model. Try to find another equilibrium point- that is, a point where the population neither grows nor declines.  [PointSolutions] 
 
-**Q**: Carrying capacity (K) represents one equilibrium point in this model. Try to find another equilibrium point- that is, a point where the population neither grows nor declines.  [tophat] 
-
-**Q**: is this equilibrium a *stable equilibrium* or an *unstable equilibrium*? [tophat]
-
-**Q**: if you plot birth and death rates as a function of density in this model, can you identify the two equilibria? [tophat]
+**Q**: is this equilibrium a *stable equilibrium* or an *unstable equilibrium*? [PointSolutions]
 
 **Q:** Why do Allee effects often spell bad news for wildlife conservation?  
 
-
-And just for fun, here is an article about [the passenger pigeon and its possible "de-extinction"](http://www.audubon.org/magazine/may-june-2014/why-passenger-pigeon-went-extinct)
+And just for fun, here is some information about [the passenger pigeon and its possible "de-extinction"](https://reviverestore.org/about-the-passenger-pigeon/)
 
 **Q:** Do you support Revive and Restore's efforts to bring back the passenger pigeon? Why or why not??
 
