--- a/LAB3.Rmd
+++ b/LAB3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 3: Age-structured populations"
 author: "NRES 470/670"
-date: "Spring 2022"
+date: "Spring 2023"
 output: 
   html_document: 
     theme: spacelab
@@ -13,9 +13,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-In this lab we will have an opportunity to build more complex population models in InsightMaker. Among the concepts we will play around with are *age structure*, *life tables*, and *simulating age-structured population dynamics*.  
-
-First let's do some math!
+In this lab we will have an opportunity to build more complex population models in InsightMaker. Among the concepts we will play around with are *age structure*, *life tables*, and *simulating the dynamics of age-structured populations*.  
 
 ## Mathematics of Age-structured populations
 
@@ -25,7 +23,7 @@ Let's start with some definitions- population ecology, and life tables in partic
 
 **Cohort:** A group of organisms of the same species that are born during the same year or the same breeding season
 
-**x:** Age, or time elapsed since the birth date of the cohort (often in years).       
+**x:** Age, or time elapsed since the birth date of the cohort (usually in years).       
 
 **S(x):** Survivors, or Census size -- the number of individuals in the cohort who survived to time x. 
 
@@ -43,29 +41,29 @@ Let's start with some definitions- population ecology, and life tables in partic
 
 **Q**: why is the above estimate for life expectancy (LE) *approximate* and not exact? Is it likely to be biased or unbiased?          
 
-**Generation time** is defined as the _Average age of the parents within a cohort_ (for all offspring born to the cohort, first record the age of the mom at the time she gave birth, and then take the average of all these ages!). This can be computed as: $G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)}  \qquad \text{(Eq. 5)}$
+**Generation time** is defined as the _Average age of individuals in the cohort when they produce offspring_ (for all offspring born to the cohort, record the age of the mom at the time she gave birth, and then take the average of all these ages!). This can be computed as: $G = \frac{\sum_{x=0}^{k}l(x)\cdot b(x)\cdot x}{\sum_{x=0}^{k}l(x)\cdot b(x)}  \qquad \text{(Eq. 5)}$
 
 **Intrinsic rate of growth,** $r$ is defined (to a first-order approximation) as: $r = \frac{ln(R_0)}{G}  \qquad \text{(Eq. 6)}$
 
-**lambda,** $r$ is defined (to a first-order approximation) as: $\lambda = e^{r}$
+**lambda,** $\lambda$ is defined (to a first-order approximation) as: $\lambda = e^{r}$
 
 NOTE: the Gotelli book describes a more exact way to compute the intrinsic rate of growth from life tables, called the *Euler method*. You are not required to know how to use the Euler method in this class.      
 
 One more concept I want to introduce here is **reproductive value**, or V(x). This represents the expected future reproductive output of an individual of age x, *adjusted for the intrinsic rate of growth*: $V(x) = \frac{e^{rx}}{l_x} \cdot \sum_{y=x+1}^{k}e^{-ry}l_yb_y   \qquad \text{(Eq. 7)}$.  Different individuals in a population tend to have different "value" in terms of contributing to future generations. Caswell (2001) said "The amount of future reproduction, the probability of surviving to realize it, and the time required for the offspring to be produced all enter into the reproductive value of an age-class". Knowing something about the relative "value" of different individuals in a population can help managers decide which individuals to translocate, or to harvest, or cull from a population. Therefore, reproductive value is critical for applied population ecology! Reproductive Value also factors heavily in evolutionary studies and life history theory.  
 
-**Q:** Why is the reproductive value discounted by the population growth rate??    
+**Q:** Why is the reproductive value 'discounted' by the population growth rate??    
 
 ## Exercise 1: life table analysis
 
-![](blackrobin.jpg)
+![](blackrobin.jpg){width=30%}
 
 Let's imagine that we are following a *cohort* of reintroduced Chatham Island robins on a small island through time. 
 
 - First, we establish artificial nests and place 200 captive-laid eggs in them.      
 - All individuals are given a unique marking as soon as they hatch (hatching is 100% successful!). These markings are permanent and not affected by tag loss!        
 - We visit the island once per year, and count all the female individuals with tags who still exist in the population. We can assume that if the individual is alive then we will observe it (perfect detection!). If we do not see the individual we know with certainty that it is dead!     
-- Of the original robins released on the island, we record the following numbers over 5 years revisiting the island (starting with 200 at year 0): 55 (year 1), 25 (year 2), 14 (year 3), 5 (year 4), and 0 (year 5).
-- We record the following per-capita reproductive rates for each age: 0, 1.9, 5.8, 5.5, 4.2, and 0        
+- Of the original robins released on the island, we record the following numbers over 5 years revisiting the island (starting with 200 at year 0): 85 (year 1), 45 (year 2), 18 (year 3), 9 (year 4), and 0 (year 5).
+- We record the following per-capita reproductive rates for each age: 0, 1.8, 2.1, 2.9, 0.4, and 0        
 
 You can load these data in [this file](life_table2.xlsx). It should look something like this:
 
@@ -80,19 +78,41 @@ knitr::kable(lifetable,caption="",col.names = c("x","S(x)","b(x)"))
 
 ### QUESTIONS, Exercise 1 (black robin example):
 
-1a. Plot the survivorship curve (log-survivorship vs. age). Does this population most closely resemble type I, II, or III survivorship? Include the plot of your survivorship curve in your submitted response. Please refer to the 'age-structured populations' lecture page for more information on survivorship curves. 
+First, plot the *survivorship curve*. Specifically, make a new plot in Excel with log-survivorship on the y axis and age on the x axis. One way to do this is to make a scatterplot of raw survivorship (l(x)) against age, then double-click on the y-axis and choose the "logarithmic scale" option. Alternatively, you can make a new column representing the log of survivorship (you can use log base 10 or natural log) and plot that new variable (log l(x)) as a function of age. 
 
-1b. What is the lifetime reproductive potential, $R_0$ for this population? Based on your estimate of $R_0$ is this population growing, declining or stable? What would happen to $R_0$ if "age 1" individuals did not reproduce -- that is, what if b(1) were set to zero?  
+NOTE: Please refer to the 'age-structured populations' lecture page for more information on survivorship curves.
 
-1c. What is the life expectancy from birth, $LE$, and generation time, $G$ for this population? What would happen to $G$ if "age 1" individuals did not reproduce -- that is, if b(1) were set to zero?  
+1a. Upload your plotted survivorship curve (log survivorship vs age, see above) for the black robin. Make sure your axes are properly labeled.
 
-1d. What is the reproductive value($V$) for each age (x) in this population? Which age is associated with the highest reproductive value? If you wanted to start a new population on a different island, why might you select individuals at this age (that is, the age with highest reproductive value) to translocate?  
+1b. Based on the survivorship curve you made for the black robin (plot from 1a, above), does this population most closely resemble type I, II, or III survivorship? Briefly explain your reasoning.
 
-1e. Imagine you have the following population of black robins this year: 100 individuals of age 0 (newborns) and 10 individuals of age 1 (no older individuals). How many newborn robins (age 0) would you expect to be born one year from now, assuming no new robins will be born in the population until right before you survey the population next year? Explain how you got your answer! [NOTE: you do not need to use InsightMaker or Excel here- just think it through and use a calculator if needed] [HINT: the age 0 individuals will be 1 years old next year, and the 1-year-olds this year will be two years old next year] [HINT: in order to reproduce next year, individuals must survive to next year!] 
+1c. What is the lifetime reproductive potential, $R_0$ for this population? Based on your estimate of $R_0$ (1c, above) is this population growing, declining or stable? 
+
+1d. What is the estimated life expectancy at birth, $LE$, for this black robin population? 
+
+1e. What is the estimated generation time, $G$ for this black robin population, in years? 
+
+1f. What is the reproductive value($V$) for each age (x) in this population? Which age is associated with the highest reproductive value? 
+
+ASIDE: If you wanted to start a new population of black robins on a different island, you might choose to translocate individuals at this age to maximize the probability of success with the fewest number of translocatees!
+
+For the following questions (1g and 1h ), set the value of b(1) (cell C3 in Excel) to zero. When you do this, you are effectively delaying the age at reproduction by one year. 
+
+1g. After making this change (i.e., delay age-at-maturity by one year), what is the new lifetime reproductive potential, $R_0$ for this population? Based on your new estimate of $R_0$, is this population growing, declining or stable?
+
+1h. After making this change (i.e., delay age-at-maturity by one year), what is your new estimate for the generation time $G$ for this population, in years?  
+
+1i. Imagine you have the following population of black robins this year: 100 individuals of age 0 (newborns) and 10 individuals of age 1. No older indviduals (age 2, 3, 4) exist on the island at this time. How many newborn robins (age 0) would you expect to be born one year from now, assuming no new robins will be born in the population until right before you survey the population next year? Explain how you got your answer! 
+
+NOTE: you do not need to use InsightMaker or Excel here- just think it through and use a calculator if needed 
+
+HINT: the age 0 individuals will be 1 years old next year, and the 1-year-olds this year will be two years old next year
+
+HINT: in order to produce offspring one year from now, individuals must first survive to next year! 
 
 ## Exercise 2: another life table analysis
 
-![](uinta.jpg)
+![](uinta.jpg){width=40%}
 
 Let's take the Uinta ground squirrel example from the Gotelli book. Take a minute to read the description in Gotelli (end of Ch. 3)... 
 
@@ -100,97 +120,108 @@ This is *real data* from a long-term experimental study. The version you see bel
 
 The first life table (on the left) represents a cohort of ground squirrels in a population at typical densities.
 
-The second life table (right) represents a cohort of ground squirrels in a population at lower-than-average densities (many conspecifics removed prior to the start of the experiment). 
+The second life table (right) represents a cohort of ground squirrels in a population at lower-than-average densities (many individuals were removed from the population prior to the start of the experiment). 
 
 Load up the [Uinta ground squirrel life table data](life_table3.xlsx) given to us by Gotelli (reproduced from Slade and Balph 1974 -- and modified slightly to make it easier to work with). 
 
 ### QUESTIONS, Exercise 2: Uinta ground squirrel example
 
-2a. Compare the two life tables (pre-density reduction and post-density reduction) using the following two major life-table metrics: $R0$ and $r$. What key differences do you notice between these two life tables? If these changes were due to density-dependence, would this represent negative density-dependence (negative feedback) or positive density-dependence (Allee effect)? Explain your reasoning. 
+For the following questions (2a and 2b) Compare the two life tables (pre-density reduction vs post-density reduction).
 
-2b. Try altering b(2) in the pre-density-reduction table from 1.29 to 3.5 to reflect a substantial improvement in forage quality. How did generation time ($G$) change after you did this? Based on this result, would you say that $G$ is an intrinsic trait of a species, or can it change as a function of factors like resource availability? Explain your reasoning.   
+2a. What is the lifetime reproductive potential ($R0$) and intrinsic rate of growth ($r$) for the Uinta ground squirrels, both before and after the density reduction experiment? Based on this result, write one sentence explaining whether population growth rate was faster or slower after the density-reduction experiment.  
 
+2b. If the change in population growth rate after a reduction in density you reported in your answer to 2a was driven by a density-dependence mechanism (e.g., competition for resources, "safety in numbers"), would this represent a negative feedback (a stabilizing force potentially resulting in population regulation) or a positive feedback (Allee effect, which can be a destabilizing force that can induce rapid extinction)? Explain your reasoning. 
 
 ## Exercise 3: age-structured models in InsightMaker
 
-Let's build an age-structured model from scratch in InsightMaker. To do this, you can follow these steps:
+Let's first build an age-structured model from scratch in InsightMaker. To do this, you can follow these steps:
 
 1. Open a blank workspace and save it. 
 
-2. Make three new stocks in your canvas: *Age 0*, *Age 1* and *Age 2*. 
+2. Make three new stocks in your canvas: *Age 0*, *Age 1* and *Age 2*. The *Age 0* stock represents newborns- since the model runs on a one-year time step, these individuals all transition to the *Age 1* stock if they survive. The surviving *Age 1* individuals transition to *Age 2* and so on...   
 
-3. Make a new flow (flow in) called *Births*. This should represent new *Age 0* individuals. We will ignore immigration for now, so new additions into the "Age 0" stock is the only way new individuals can be added to the population. We will assume that *Age 1* and *Age 2* are the only reproductively active ages. Therefore, draw [Links] from *Age 1* and *Age 2* to *Births*. 
+3. Make a new flow ([Flow In]) called *Births*. This should represent new *Age 0* individuals added to the population each year. We will ignore immigration, so new additions into the "Age 0" stock represents the sole source of new individuals. We will assume that individuals are capable of reproduction at exactly 1 and 2 years of age. We will assume that births occur at the end of each time step- so since this species can give birth at age 1, individuals that are newborns (*Age 0*) today will contribute new babies into the population at the very end of the first time step, if they manage to survive their first year of life. Therefore, draw [Links] from *Age 0* and *Age 1* to *Births*. 
 
-4. Make new flows from _Age 0 to Age 1_ and from _Age 1 to Age 2_, called *Transition to Age 1* and *Transition to Age 2*, respectively. These flows represent **growth**, or advancement from *Age 0* to *Age 1* and from *Age 1* to *Age 2*.
+NOTE: this is one of the trickier concepts in population ecology. We will revisit this in more detail in Lab 4.
 
-5. Make three new flows representing mortality, emerging respectively from each stock and called *Age 0 mortality*, *Age 1 mortality*, and *Age 2 mortality*.  
+4. Make new flows from _Age 0 to Age 1_ and from _Age 1 to Age 2_, called *Transition to Age 1* and *Transition to Age 2*, respectively (yes, you can use Flows to connect two Stocks!). These flows represent advancement from *Age 0* to *Age 1* and from *Age 1* to *Age 2*. When you are making these flows from one [Stock] to another, drag the [Flow] out from the arrow on the first stock, and keep dragging until the second stock is highlighted on the canvas- that way you can be sure the two stocks are connected! 
+
+5. Make three new [Flows Out] representing mortality, emerging respectively from each stock and called *Age 0 mortality*, *Age 1 mortality*, and *Age 2 mortality*. 
+
+6. Make two new variables called *Age 1 birth rate* and *Age 2 birth rate*, representing the per-capita birth rate for individuals that are exactly 1 years of age, and another representing the per-capita birth rate for individuals that are exactly 2 years of age. Draw links from these variables to the *Births* flow. Also, draw links connecting the *Transition to Age 1* and *Transition to Age 2* variables to the *Births* flow. You may want to use "Ghost Primitives" to keep your canvas tidy. 
+
+7. Make two new variables representing the per-capita transition (survival) rates from one stage to another, called *Transition rate, Age 0 to 1* and *Transition rate, Age 1 to 2*. Draw links to the appropriate flows. NOTE: these transition rates are also sometimes called "growth rates" in population ecology.
 
 Your new insight should look something like this: 
 
-![](IM7.jpg)
+![](IM7.jpg){width=50%}
 
 6. Parameterize your new age-structured population!   
 
-    6a. For births, make new variables called *Fecundity, age 1* and *Fecundity, age 2*, representing the per-capita reproductive rate for age 1 and age 2, respectively. Draw links from these variables to *Births*, and set these variables at 1.3 and 1.6, respectively. Click on the equation editor for *Births* and set the equation appropriately (see questions below)   
+    6a. Set the *Age 1 birth rate* and *Age 2 birth rate* to 1.6 and 2.2, respectively.  
     
-    6b. For the transitions, make new variables representing the per-capita transition rates, called *Transition rate, Age 0 to 1* and *Transition rate, Age 1 to 2*. Draw links to the appropriate flows, and set these rates at 0.45 and 0.35, respectively. NOTE: these transition rates could also be called "survival rates"                
-    6c. For the mortality rates, note that all individuals in the *Age 0* stock must either transition to *Age 1* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 2* stock must die- there is no *Age 3* class! Now click on the equation editors for the mortality rates, and specify the mortality rates appropriately.              
+    6b. Set the *Transition rate, Age 0 to 1* and *Transition rate, Age 1 to 2* rates to 0.4 and 0.3, respectively.                
+    6c. Note that all individuals in the *Age 0* stock must either transition to *Age 1* or die.  Similarly, all individuals in the *Age 1* stock must either transition to *Age 2* or die. Finally, all individuals in the *Age 2* stock must die- there is no *Age 3* class! Now click on the equation editors for the mortality rates, and specify the mortality rates appropriately.              
 
-7. For each flow in the model, use the equation editor to specify the appropriate equations. 
+7. For each [Flow] in the model, use the equation editor to specify the appropriate equations. 
 
 8. Explore the model- make sure you understand how it works!
 
 Your final model should look something like this:
 
-![](IM_lab3.jpg)
-
+![](IM_lab3.jpg){width=50%}
+I encourage you to build your own age-structured IM model, but I will also provide a link to a "skeleton" version of the model so you can focus on the concepts and not struggle too much with the modeling. Here is the "skeleton" version (all the structure but none of the parameters or equations) of the model: [https://insightmaker.com/insight/SATbX2gVkMZqmGEwi175V/lab3-exercise3-skeleton](https://insightmaker.com/insight/SATbX2gVkMZqmGEwi175V/lab3-exercise3-skeleton) 
 
 ### QUESTIONS, Exercise 3 (age-structured model in InsightMaker):
 
-3a. What is the equation for *Births* in the above model (flow into the 'Age 0' stock)? Copy and paste your equation from InsightMaker. Using plain English, explain how this equation correctly computes the number of births each year.
+3a. What is your equation for *Births* flow in the above model (flow into the 'Age 0' stock)? Copy and paste your equation from InsightMaker. Using plain English, explain why this is the correct equation for computing the number of births each year.
 
-3b. Initialize the population abundances (Age 0, Age 1, and Age 2 initial abundances) so that the population consists of only 100 individuals in the first (*Age 0*) age class (i.e., 100 individuals in Age 0, no individuals in the other age classes). Run the model for 30 years. Describe how the population dynamics at the beginning of the simulation differs from the dynamics at the end of the simulation. Optionally, you may include an image of an InsightMaker plot to help illustrate your answer.  
+3b. Initialize the population abundances (initial abundances for Age 0, Age 1, and Age 2) so that your population consists of only 100 individuals in the first age class (i.e., 100 individuals in Age 0, no individuals in the other age classes). Run the model for 30 years in Insightmaker, and upload the resulting plot of abundance over time as an image file.  
 
-3c. Is this a growing or declining population (make sure you use the originally specified vital rates)? Imagine you could enact a predator-control program and reduce the mortality of *Age 0* individuals. How much would you have to reduce mortality (i.e., increase the proportion transitioning from Age 0 to age 1) of this age class to make a growing population? Optionally, you may include an image of an InsightMaker plot to help illustrate your answer.
+NOTE: this should be a declining population!
 
-3d. Please share the URL for your Insight: save your model as a 'Public Insight' and insert the URL into Top Hat in the appropriate place. And don't make any more changes to this insight once you have submitted it (use a 'cloned' version if you want to keep making changes)! 
+3c. Imagine you could enact a predator-control program and increase the survival of *Age 0* individuals (first-year survival rate). What is the smallest value of first-year survival (transition from Age 0 to age 1) that would cause this population to grow over time (keeping all other parameters at the values stated above)? Briefly explain how you got your answer. 
+
+3d. Please share the URL for your Insight: save your model as a 'Public Insight' and insert the URL into WebCampus in the appropriate place. And don't make any more changes to this insight once you have submitted it (use a cloned version if you want to keep making changes)! 
     
 
-## Optional: exercise 4: more complex age-structured models in InsightMaker!
+
+## Checklist for Lab 3 completion
+
+* Please type your responses into one Word document and submit _using WebCampus_!
+
+***Due Feb 24 at 11:59pm.***
+
+  +  **Exercise 1**
+      -  *Image upload (1a.)*   
+      -  *Short answer (1b.)* 
+      -  *Short answer (1c.)*
+      -  *Short answer (1d.)*
+      -  *Short answer (1e.)*
+      -  *Short answer (1f.)*
+      -  *Short answer (1g.)*
+      -  *Short answer (1h.)*
+      -  *Short answer (1i.)*
+
+  +  **Exercise 2**
+      -  *Short answer (2a.)*
+      -  *Short answer (2b.)*
+
+  +  **Exercise 3**
+      -  *Short answer (3a.)*
+      -  *Image upload (3b.)*
+      -  *Short answer (3c.)*
+      -  *InsightMaker URL (3d.)*
+      
+      
+## Completely optional: exercise 4: more complex age-structured models in InsightMaker!
 
 Implement the following density-dependent model (modifying your previous age-structured model in InsightMaker). _If the total population (all three age classes combined!) exceeds 75 individuals, then reproduction rates drop to 25% of normal rates._ 
 
 4a (optional). Change the Age 1 survival rate to 0.75 (from 0.35). Run the simulation starting with 75 individuals, all in Age class 0. Describe the resulting population dynamics. Is this a **random (stochastic)** model (different results every time you run the model, even with the same initial conditions)? Explain your reasoning. 
 
-4b (optional). Please share the URL for your Insight: save your model as a 'Public Insight' and insert the URL into Top Hat in the appropriate place. And don't make any more changes to this insight once you have submitted it (use a 'cloned' version if you want to keep making changes)! 
 
 
-## Checklist for Lab 3 completion
-
-* Please type your responses into one Word document and submit _using Top Hat_!
-
-***Due Feb 18 at 11:59pm.***
-
-    +  **Exercise 1**
-        -  *Short answer (1a.)*   
-        -  *Short answer (1b.)* 
-        -  *Short answer (1c.)*
-        -  *Short answer (1d.)*
-        -  *Short answer (1e.)*
- 
-    +  **Exercise 2**
-        -  *Short answer (2a.)*
-        -  *Short answer (2b.)*
- 
-    +  **Exercise 3**
-        -  *Short answer (3a.)*
-        -  *Short answer (3b.)*
-        -  *Short answer (3c.)*
-        -  *InsightMaker model (3d.)*
-        
-    +  **Exercise 4 (optional)**
-        -  *Short answer (4a.)*
-        -  *InsightMaker model (4b.)*
 
 
 
