--- a/LECTURE5.Rmd
+++ b/LECTURE5.Rmd
@@ -101,13 +101,11 @@ End If
 
 Now you can try to answer the following questions:
 
-**Q**: What is the carrying capacity (K) for this population? [PointSolutions]
-
 **Q**: Carrying capacity (K) represents one equilibrium point in this model. Try to find another equilibrium point- that is, a point where the population neither grows nor declines.  [PointSolutions] 
 
 **Q**: is this equilibrium a *stable equilibrium* or an *unstable equilibrium*? [PointSolutions]
 
-**Q:** Why do Allee effects often spell bad news for wildlife conservation?  
+Hopefully it is clear from this example why Allee effects often spell bad news for wildlife conservation!  
 
 And just for fun, here is some information about [the passenger pigeon and its possible "de-extinction"](https://reviverestore.org/about-the-passenger-pigeon/)
 
