--- a/LAB4.Rmd
+++ b/LAB4.Rmd
@@ -406,7 +406,7 @@ NOTE: In this class we have stressed the importance of density dependence in det
 
 As a test of your understanding, try to implement the following passage as a matrix projection model:
 
-![](redtail1.jpg)
+![](redtail1.jpg){width=30%}
 
 > We assumed that the red-tailed hawk life history could be described in terms of three major life stages: hatchling (first year of life), juvenile (largely individuals in their second year of life), and adult (generally the third year of life and beyond). We assumed that adult females experienced an average of 15% mortality each year. Juvenile female mortality was set at 30% per year. Approximately 10% of juvenile females remain in the juvenile phase each year, and all other survivors transition to the adult stage. Finally, hatchlings had a 21% chance of surviving and transitioning to become juveniles. Adults are the primary reproductive stage, and produce an average of 6 new hatchlings each year, half of which are female. Juveniles that fail to transition to the Adult stage tend to produce only 1.8 new hatchlings each year on average, half of which are female. We ran a female-only matrix population model, and we initialized the population with 800 hatchlings, 150 juveniles, and 50 adults.   
 
