--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final projects!"
 author: "NRES 470/670"
-date: "Spring 2022"
+date: "Spring 2023"
 output: 
   html_document: 
     theme: spacelab
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ## Final projects for NRES 470
 
-Students will work in groups of ~3-4 people (maximum of 5) to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.
+Students will work in groups of ~3-4 people to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.
 
 ## Overview
 
@@ -28,12 +28,12 @@ Students will work in groups of ~3-4 people (maximum of 5) to perform a populati
 
 ## Timeline (updated)
 
-- **PROPOSAL:** Due Fri March 4!
-- **INITIAL PVA** Due Wed April 6: description of how your PVA model works and where the parameter estimates come from -- and a link to a working PVA model!     
-- **DRAFT FINAL PAPER:** Due Mon April 18.
-- **PEER REVIEWS:** Fri Apr 22 in lab.
-- **FINAL PRESENTATIONS:** Wed Apr 27 and Fri April 29!
-- **FINAL FINAL PAPER:** Due Wed May 11
+- **PROPOSAL:** Due Fri March 10!
+- **INITIAL PVA** Due Wed April 12: description of how your PVA model works and where the parameter estimates come from -- and a link to a working PVA model!     
+- **DRAFT FINAL PAPER:** Due Mon April 24.
+- **PEER REVIEWS:** Fri Apr 28 in lab.
+- **FINAL PRESENTATIONS:** Wed May 3 and Fri May 5!
+- **FINAL FINAL PAPER:** Due Wed May 17
 
 Remember that the semester will get crazy at the end (including for your instructors). Plan ahead! 
 
@@ -42,7 +42,7 @@ Remember that the semester will get crazy at the end (including for your instruc
 Your project proposal (approx 1 pg) will consist of:  
 
 1. **Title**: should indicate what species you are modeling, and hint at what question(s) will be addressed   
-2. **Project participants**: provide names of all participants (3-5).   
+2. **Project participants**: provide names of all participants (3-4).   
 3. **Research question(s)**: Provide one or more testable and management-relevant questions that you plan to address using your population model. 
 4. **Project rationale**: Describe the rationale for choosing this species and management/conservation question. Be as specific as possible! Convince your instructor/TA that your project is **interesting**!    
 5. **Data sources**: Describe one or more information sources you plan to use to guide PVA construction and parameterization (we want to make sure your project is **possible**!)  
@@ -50,7 +50,7 @@ Your project proposal (approx 1 pg) will consist of:
 Some key parameters you will likely need for your PVA model (and will be searching the literature for!) are: 
 
 - *survival rates* (usually age-structured)  
-- *fecundity rates* (often age-structured as well) and *age at maturity*    
+- *birth rates* (often age-structured as well) and *age at maturity*    
 - *stochasticity* (amount of year-to-year variability in the above vital rates)  
 - *initial abundance*   
 - *mode of population regulation* (which vital rates have negative density dependence? Linear or threshold?)
@@ -125,7 +125,7 @@ A rubric for the presentations can be found [here](presentationProject_rubric.do
 
 ## Final paper peer review/feedback session
 
-In lab on Fri Apr 22 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
+In lab on Fri Apr 28 we will have a "peer review" session where we will have a chance to give each other feedback on draft manuscripts. 
 
 The way it will work is as follows:
 
